{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 54,
  "lineage": "55b1f852-3c6d-4548-7e5d-cb28c519b892",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0914547665e6a707c",
            "arn": "arn:aws:ec2:eu-north-1:539941030570:instance/i-006eaa7a428b122ca",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006eaa7a428b122ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-023c1f24307e84eca",
            "private_dns": "ip-10-0-46-241.eu-north-1.compute.internal",
            "private_ip": "10.0.46.241",
            "public_dns": "ec2-13-49-75-51.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.75.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea4cc37a55c4ffed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0733b6f633a75f0f6",
            "tags": {
              "Name": "AnsibleServer"
            },
            "tags_all": {
              "Name": "AnsibleServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03107538baf7110a5",
              "sg-08fc64c46c483ff43",
              "sg-0d191f4b4f59167f8"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.allow_http",
            "aws_security_group.allow_jenkins",
            "aws_security_group.allow_ssh",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_region.current",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0914547665e6a707c",
            "arn": "arn:aws:ec2:eu-north-1:539941030570:instance/i-048e6fc2500e75dd7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048e6fc2500e75dd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fed8522a4e781ed3",
            "private_dns": "ip-10-0-85-168.eu-north-1.compute.internal",
            "private_ip": "10.0.85.168",
            "public_dns": "ec2-51-20-124-5.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.124.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00033ffeff4018adf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0733b6f633a75f0f6",
            "tags": {
              "Name": "JenkinsServer"
            },
            "tags_all": {
              "Name": "JenkinsServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03107538baf7110a5",
              "sg-08fc64c46c483ff43",
              "sg-0d191f4b4f59167f8"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.allow_http",
            "aws_security_group.allow_jenkins",
            "aws_security_group.allow_ssh",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_region.current",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0914547665e6a707c",
            "arn": "arn:aws:ec2:eu-north-1:539941030570:instance/i-0fc2358195858ed67",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc2358195858ed67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0600e6d35b1f95f55",
            "private_dns": "ip-10-0-134-64.eu-north-1.compute.internal",
            "private_ip": "10.0.134.64",
            "public_dns": "ec2-51-21-150-84.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.150.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa9339f612728659",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0733b6f633a75f0f6",
            "tags": {
              "Name": "HTTPServer"
            },
            "tags_all": {
              "Name": "HTTPServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03107538baf7110a5",
              "sg-08fc64c46c483ff43",
              "sg-0d191f4b4f59167f8"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.allow_http",
            "aws_security_group.allow_jenkins",
            "aws_security_group.allow_ssh",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_region.current",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539941030570:internet-gateway/igw-082e4566aa6748fbc",
            "id": "igw-082e4566aa6748fbc",
            "owner_id": "539941030570",
            "vpc_id": "vpc-03eb9a3d6ad28f221"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539941030570:route-table/rtb-01d4439f1f10874cb",
            "id": "rtb-01d4439f1f10874cb",
            "owner_id": "539941030570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082e4566aa6748fbc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03eb9a3d6ad28f221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0150a6949710b7550",
            "route_table_id": "rtb-01d4439f1f10874cb",
            "subnet_id": "subnet-0733b6f633a75f0f6"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.route_table",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539941030570:security-group/sg-08fc64c46c483ff43",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fc64c46c483ff43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "539941030570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03eb9a3d6ad28f221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539941030570:security-group/sg-0d191f4b4f59167f8",
            "description": "Allow Jenkins traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d191f4b4f59167f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_jenkins",
            "name_prefix": "",
            "owner_id": "539941030570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03eb9a3d6ad28f221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539941030570:security-group/sg-03107538baf7110a5",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03107538baf7110a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "539941030570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03eb9a3d6ad28f221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539941030570:subnet/subnet-0733b6f633a75f0f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0733b6f633a75f0f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539941030570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03eb9a3d6ad28f221"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:539941030570:vpc/vpc-03eb9a3d6ad28f221",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1315848fa32aa7b",
            "default_route_table_id": "rtb-078674d9d85c55f5b",
            "default_security_group_id": "sg-0047f0ced8bdad722",
            "dhcp_options_id": "dopt-09cd41d367958df84",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03eb9a3d6ad28f221",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078674d9d85c55f5b",
            "owner_id": "539941030570",
            "tags": {
              "Name": "AWS VPC"
            },
            "tags_all": {
              "Name": "AWS VPC"
            }
          }
        }
      ]
    }
  ]
}